# Product-Launch-War-Room-Multi-Agent-Decision-System-for-Teams

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
components/: decision_banner.py
outputs/: feedback.json  final_decision.json  metrics.json  release_notes.txt
pages/: analysis.py  dashboard.py  feedback.py  settings.py  traces.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py  data_analyst.py  marketing.py  product_manager.py  risk_critic.py
src/data/: __init__.py  mock_data.py  vector_store.py
src/graph/: edges.py  nodes.py  workflow.py
src/models/: __init__.py  schemas.py  state.py
src/tests/: __init__.py  conftest.py  test_agents.py  test_tools.py  test_workflow.py
src/tools/: __init__.py  metrics_tools.py  risk_tools.py  sentiment_tools.py  trend_tools.py
src/utils/: __init__.py  tracer.py
traces/: sample_trace.json  trace_launch_001_20260410_010842.json  trace_test_001_20260410_015337.json  trace_test_002_20260410_015343.json  trace_test_003_20260410_015349.json
utils/: loader.py  state.py
